--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -61,7 +61,7 @@ body {
       display: -moz-flex;
       display: -webkit-flex;
       display: flex;
-      justify-content: center;
+      justify-content: center;  
       flex-wrap: wrap;
       flex-direction: row;
       height: 100%;
@@ -128,9 +128,14 @@ body {
         float: left;
         display: block;
         .link-wrapper {
-          position: default;
           float: left;
           margin-bottom: 10px;
+          border-style: solid;
+          border-color: $milk;
+          border-bottom-width: 7.5px;
+          border-right-width: 0px;
+          border-left-width: 0px;
+          border-radius: 20px;
           .room {
             text-align: center;
             max-width: 250px;
