--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -41,7 +41,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: auto;
-    margin-top: 200px;
+    margin-top: 10%;
     margin-bottom: 80px;
     width: 62%;
     height: 62%;
@@ -132,10 +132,10 @@ body {
           margin-bottom: 10px;
           border-style: solid;
           border-color: $milk;
-          border-bottom-width: 7.5px;
+          border-top-width: 0px;
+          border-bottom-width: 2.5px;
           border-right-width: 0px;
           border-left-width: 0px;
-          border-radius: 20px;
           .room {
             text-align: center;
             max-width: 250px;
