--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -122,6 +122,7 @@ body {
   @media only screen and (max-width: 600px) {
     .cardContainer {
       min-width: 0;
+      width: 200px;
       margin-top: 75px;
       height: auto;
       .flex-container {
@@ -130,12 +131,22 @@ body {
         .link-wrapper {
           float: left;
           margin-bottom: 10px;
+          &.all {
           border-style: solid;
           border-color: $milk;
           border-top-width: 0px;
           border-bottom-width: 2.5px;
           border-right-width: 0px;
           border-left-width: 0px;
+          }
+          &.else {
+          border-style: none;
+          border-color: #1e1d1d;
+          border-top-width: 0px;
+          border-bottom-width: 0px;
+          border-right-width: 0px;
+          border-left-width: 0px;
+          }
           .room {
             text-align: center;
             max-width: 250px;
