--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -1,6 +1,7 @@
 $milk: #e0d0d0;
 $background_dark: #1e1d1d;
 $black: #000000;
+$steel: #202838;
 
 body {
   margin: 0;
@@ -77,6 +78,11 @@ body {
         display: block;
         position: relative;
         .room {
+          padding: 7.5px;
+          border-width: 4px;
+          border-style: solid;
+          border-color:  $milk;
+          border-radius: 15px;
           position: relative;
           margin: auto;
           margin-top: 20px;
@@ -84,7 +90,8 @@ body {
           user-select: none;
           cursor: pointer;
           display: block;
-          width: 450px;
+          width: 350px;
+          margin-right: 20px;
           height: auto;
           font-family: 'Fjalla One', sans-serif;
           font-size: 275%;
@@ -96,7 +103,7 @@ body {
             animation-timing-function: ease-out;
             @at-root {
               @keyframes milker {
-                from {color: $black}
+                from {color: $steel}
               }
             }
             color: $milk;
@@ -110,10 +117,11 @@ body {
             @at-root {
               @keyframes darker {
                 from {color: $milk}
-                to {color: $black}
+                to {color: $steel}
               }
             }
-            color: $black;
+            -webkit-text-stroke: 0.5px $milk;
+            color: $steel;
           }
         }
       }
@@ -122,14 +130,15 @@ body {
   @media only screen and (max-width: 600px) {
     .cardContainer {
       min-width: 0;
-      width: 200px;
+      width: 240px;
       margin-top: 45px;
       height: auto;
       .flex-container {
         float: left;
         display: block;
         .link-wrapper {
-          float: left;
+          padding: none;
+          width: 100%;
           margin-bottom: 10px;
           &.all {
           border-style: solid;
@@ -148,8 +157,15 @@ body {
           border-left-width: 0px;
           }
           .room {
+            padding: none;
             text-align: center;
             max-width: 250px;
+            border-style: none;
+            border-color: #1e1d1d;
+            border-top-width: 0px;
+            border-bottom-width: 0px;
+            border-right-width: 0px;
+            border-left-width: 0px;
           }
         }
       }
