--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -174,6 +174,9 @@ body {
         float: left;
         display: block;
         .link-wrapper {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
           padding: none;
           max-width: 250px;
           margin-bottom: 10px;
