Reverted GUI to original and implemented socket.REST & realtime crossUser capabilities

--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -97,19 +97,35 @@ body {
           display: block;
           width: 350px;
           height: auto;
-          .text {
-            font-family: 'Fjalla One', sans-serif;
-            font-size: 175%;
-            &.title {
-              color: milk;
+          font-family: 'Fjalla One', sans-serif;
+          font-size: 275%;
+          &.on {
+            animation-delay: 0ms;
+            animation-duration: 0.25s;
+            animation-name: milker;
+            animation-iteration-count: 1;
+            animation-timing-function: ease-out;
+            @at-root {
+              @keyframes milker {
+                from {color: $steel}
+              }
             }
-            &.on {
-              color: $milk;
+            color: $milk;
+          }
+          &.off {
+            animation-delay: 0ms;
+            animation-duration: 0.25s;
+            animation-name: darker;
+            animation-iteration-count: 1;
+            animation-timing-function: ease-out;
+            @at-root {
+              @keyframes darker {
+                from {color: $milk}
+                to {color: $steel}
+              }
             }
-            &.off {
-              -webkit-text-stroke: 0.5px $milk;
-              color: $steel;
-            }
+            -webkit-text-stroke: 0.5px $milk;
+            color: $steel;
           }
         }
       }
