--- a/src/js/components/toolbar.scss
+++ b/src/js/components/toolbar.scss
@@ -53,6 +53,7 @@ $coolFont: "Fjalla One", sans-serif;
 
     .menuItemContainer {
       opacity: 0;
+      transform: perspective(1000px);
       &.isAnimated {
         transform-origin: top center;
         animation-timing-function: ease-in-out;
