--- a/src/js/components/toolbar.scss
+++ b/src/js/components/toolbar.scss
@@ -6,6 +6,7 @@ $coolFont: "Fjalla One", sans-serif;
 
 .toolbar {
   position: relative;
+  display: none;
   .arrow {
     position: relative;
     width: 46px;
