--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -5,11 +5,16 @@ $steel: #202838;
 $coolFont: "Fjalla One", sans-serif;
 
 body {
+  position: relative;
   margin: 0;
   padding: 0;
+  height: 100%;
   min-width: 300px;
   background: $background_dark;
-	overflow-x: hidden;
+  overflow-x: hidden;
+  #app {
+    height: 100%;
+  }
   .transition {
     transition: 0.4s transform cubic-bezier(0.075, 0.52, 0.165, 1);
   }
@@ -17,7 +22,20 @@ body {
 		filter: blur(5px);
     transform: perspective(1000px) rotateX(10deg);
   }
+  .title {
+    display: inline-block;
+    position: relative;
+    font-family: $coolFont;
+    font-size: 60px;
+    color: $milk;
+    top: 40px;
+    left: calc(50% - 70.545px);
+  }
+  .wrapper {
+    bottom: 0;
+  }
   .cardContainer {
+    position: relative;
     animation-direction: forward;
     animation-delay: none;
     animation-duration: 1s;
@@ -28,7 +46,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: auto;
-    margin-top: 10%;
+    top: 100px;
     margin-bottom: 80px; 
     max-width: 70%;
     min-width: 530px;
