--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -26,7 +26,7 @@ body {
   .title {
     display: block;
     position: relative;
-    
+    top: 15px;
     font-size: 60px;
     color: $milk;
 		margin: auto;
@@ -35,6 +35,11 @@ body {
   .wrapper {
     bottom: 0;
     .tabsLayout {
+      padding: 16px;
+      position: relative;
+      top: 30px;
+      max-width: 70%;
+      min-width: 530px;
       display: flex;
       justify-content: center;
       flex-direction: row;
@@ -44,8 +49,15 @@ body {
       border-width: 10px;
       border-style: solid;
       background-color: $background_dark;
+      .tabSpacer {
+        height: inherit;
+        width: 3px;
+        background-color: $milk;
+      }
       .tabItem {
-        font-size: 25px;
+        text-decoration: none;
+        color: $milk;
+        font-size: 250%;
         padding: 5px;
       }
     }
@@ -62,7 +74,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
     margin: auto;
-    top: 100px;
+    top: 80px;
     margin-bottom: 80px; 
     max-width: 70%;
     min-width: 530px;
@@ -189,8 +201,6 @@ body {
     .cardContainer {
       min-width: 0;
       width: 240px;
-      margin-top: 45px;
-      height: auto;
       .flex-container {
         float: left;
         display: block;
