--- a/src/js/stylsheet.scss
+++ b/src/js/stylsheet.scss
@@ -200,7 +200,7 @@ body {
   @media only screen and (max-width: 800px) {
     .cardContainer {
       min-width: 0;
-      width: 240px;
+      width: 240px;\
       .flex-container {
         float: left;
         display: block;
